# websockets

./: Dockerfile  compose.yaml  pyproject.toml
blog/: asgi.py  settings.py  urls.py
comments/: admin.py  apps.py  consumers.py  filters.py  middlewares.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
comments/migrations/: 0001_initial.py
core/migrations/: 0001_initial.py
frontend/: index.html
