[tool.poetry]
name = "websockets"
version = "0.1.0"
description = ""
authors = ["Filip Mularski <mularskif@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
psycopg2 = "^2.9.9"
channels = {extras = ["daphne"], version = "^4.0.0"}
django-environ = "^0.11.2"
djangorestframework = "^3.14.0"
whitenoise = "^6.6.0"
django-filter = "^23.5"
channels-redis = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
